fix gap

--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -1,12 +1,12 @@
 .catalog {
   padding: 50px 40px;
 
-  @include responsive-grid-parameters;
-
   display: grid;
-  gap: 48px 46px;
+  gap: 46px 48px;
   grid-auto-flow: row;
   justify-items: center;
   justify-content: center;
   box-sizing: border-box;
+
+  @include responsive-grid-parameters;
 }
